--- a/biome.json
+++ b/biome.json
@@ -1,38 +1,41 @@
 {
 	"$schema": "https://biomejs.dev/schemas/2.3.4/schema.json",
 	"vcs": {
-		"enabled": false,
+		"enabled": true,
 		"clientKind": "git",
-		"useIgnoreFile": false
+		"useIgnoreFile": true
 	},
 	"files": {
 		"ignoreUnknown": false
 	},
 	"formatter": {
 		"enabled": true,
-		"indentStyle": "tab"
+		"indentStyle": "tab",
+		"lineWidth": 100
 	},
 	"linter": {
+		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"suspicious": {
+				"noExplicitAny": "warn"
+			},
+			"correctness": {
+				"useExhaustiveDependencies": "warn"
+			}
 		}
 	},
 	"javascript": {
 		"formatter": {
 			"quoteStyle": "single",
-			"semicolons": "asNeeded"
+			"semicolons": "asNeeded",
+			"trailingCommas": "es5",
+			"arrowParentheses": "always"
 		}
 	},
-	"assist": {
-		"actions": {
-			"source": {
-				"organizeImports": {
-					"level": "off",
-					"options": {
-						"identifierOrder": "natural"
-					}
-				}
-			}
+	"css": {
+		"parser": {
+			"tailwindDirectives": true
 		}
 	}
 }
